syntax = "proto3";

option go_package = "./;funds_service";

import "google/protobuf/empty.proto";

service FundsService {
    rpc LoadConfig (google.protobuf.Empty) returns (LoadConfigResponse) {}
    rpc SetConfig (SetConfigRequest) returns (google.protobuf.Empty) {}
    rpc GetCollectionWallet (google.protobuf.Empty) returns (GetCollectionWalletResponse) {}
    rpc GetRechargeWallet (GetRechargeWalletRequest) returns (GetRechargeWalletResponse) {}
    rpc GetRechargeRecords (GetRechargeRecordsRequest) returns (GetRechargeRecordsResponse) {}
    rpc FundsCollect (FundsCollectRequest) returns (google.protobuf.Empty) {}
    rpc Transfer (TransferRequest) returns (google.protobuf.Empty) {}
}

message LoadConfigResponse {
    string mnemonic = 1;
	int64 walletMaxNumber = 2;
	int64 expireTime = 3;
	int64 expireDelay = 4;
	map<string, float> collectThresholds = 5;
}

message SetConfigRequest {
    optional string mnemonic = 1;
    optional int64 walletMaxNumber = 2;
	optional int64 expireTime = 3;
	optional int64 expireDelay = 4;
	map<string, float> collectThresholds = 5;
}

message GetCollectionWalletResponse {
    string address = 1;
    string balance = 2;
}

message GetRechargeWalletRequest {
    string externalIdentity = 1;
    optional bytes externalData = 2;
    string callbackUrl = 3;
    string token = 4;
    string amount = 5;
}

message GetRechargeWalletResponse {
    string id = 1;
    string address = 2;
    int64 expireAt = 3;
}

message RechargeRecord{
    string id = 1;
    string createdAt = 2;
    string updatedAt = 3;
    string externalIdentity = 4;
    optional bytes externalData = 5;
    string callbackUrl = 6;
    string token = 7;
    string amount = 8;
    string walletAddress = 9;
    string status = 10;
    string expireAt = 11;
}

message GetRechargeRecordsRequest{
    string conditions = 1;
    uint32 pageSize = 2;
    uint32 pageIndex = 3;
}

message GetRechargeRecordsResponse{
    repeated RechargeRecord result  = 1;
    int64 total = 2;
}

message FundsCollectRequest{
    string to = 1;
    string token = 2;
}

message TransferRequest{
    string to = 1;
    string token = 2;
    string amount = 3;
    string remarks = 4;
}